--- a/onlinebanking/.env.example
+++ b/onlinebanking/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:5Pzgga80XARJ1kNwbsurPURzfA9xlTVPZhGu6Aw+BII=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
