--- a/onlinebanking/.env
+++ b/onlinebanking/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:5Pzgga80XARJ1kNwbsurPURzfA9xlTVPZhGu6Aw+BII=
+APP_KEY=base64:IdXBRdtXzi9tulg2t6gDnjuNAWKmsa4ULJNwstb8iSg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravel_auth
 DB_USERNAME=root
 DB_PASSWORD=
 
